--- a/nyegaman.html
+++ b/nyegaman.html
@@ -1683,7 +1683,8 @@
                         stackGroup: itemData.stackGroup || null,
                         stackOrder: itemData.stackOrder || 1,
                         isStackCover: itemData.isStackCover || false,
-                        isActive: true
+                        isActive: true,
+                        createdBy: 'system-user-001'
                     };
 
                     const response = await fetch(`${this.supabaseUrl}/rest/v1/gallery_items`, {
