--- a/nyegaman.html
+++ b/nyegaman.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Cache Buster: v2025.01.12.15.30 -->
 <html lang="en" style="scroll-behavior: smooth;">
 <head>
     <meta charset="UTF-8">
